--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -664,6 +664,10 @@
             glitterTranslate.removeDow1 = "$T('Glitter-confirmClear1Download')";
             glitterTranslate.grabbing = "$T('Glitter-grabbing')";
             glitterTranslate.encrypted = "$T('Glitter-encrypted')";
+            glitterTranslate.duplicate = "$T('Glitter-duplicate')";
+            glitterTranslate.tooLarge = "$T('Glitter-tooLarge')";
+            glitterTranslate.filtered = "$T('Glitter-filtered')";
+            glitterTranslate.waitSec = "$T('Glitter-waitSec')";
             glitterTranslate.checking = "$T('post-Checking')";
             glitterTranslate.misingArt = "$T('missingArt')";
             glitterTranslate.noSelect = "$T('Glitter-noSelect')";
