--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -189,14 +189,14 @@
                         </span>
                     </div>
                     <!-- /ko -->
-                    <div class="info-container-box" data-bind="css: { 'queue-error-info' : ((queueDataLeftMB()/1024) > diskSpaceLeft1()) }">
+                    <div class="info-container-box" data-bind="css: { 'queue-error-info' : diskSpaceExceeded1 }">
                         <span class="glyphicon glyphicon-hdd"></span> <span data-bind="text: diskSpaceLeft1"></span> GB $T('Glitter-free')
-                        <!-- ko if: (diskSpaceLeft2() > 0)  -->
+                        <!-- ko if: diskSpaceLeft2()  -->
                         <em>($T('Glitter-freeTemp'))</em>
                         <!-- /ko -->
                     </div>
-                    <!-- ko if: (diskSpaceLeft2() > 0)  -->
-                    <div class="info-container-box"  data-bind="css: { 'queue-error-info' : ((queueDataLeftMB()/1024) > diskSpaceLeft2()) }">
+                    <!-- ko if: diskSpaceLeft2()  -->
+                    <div class="info-container-box"  data-bind="css: { 'queue-error-info' : diskSpaceExceeded2 }">
                         <span class="glyphicon glyphicon-hdd"></span> <span data-bind="text: diskSpaceLeft2"></span> GB $T('Glitter-free')
                     </div>
                     <!-- /ko -->
