INFO message when cache not enabled
SAB needs this cache, otherwise CPU/mem usage gets out of hand. Note: on
Windows and Mac it is turned on by default already (200M), so only for
installs from source or linux users.

--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -674,6 +674,7 @@
             glitterTranslate.sendThanks = "$T('Glitter-sendThanks')";
             glitterTranslate.chooseFile = "$T('Glitter-chooseFile')";
             glitterTranslate.orphanedJobsMsg = "$T('explain-orphans')";
+            glitterTranslate.useCache = "$T('explain-cache_limitstr')";
             glitterTranslate.updateAvailable = "$T('Glitter-updateAvailable')";
             glitterTranslate.defaultText = "$T('default')";
             
