--- a/interfaces/Plush/templates/_inc_header.tmpl
+++ b/interfaces/Plush/templates/_inc_header.tmpl
@@ -24,10 +24,10 @@
   #end if#
 
   <meta name="apple-mobile-web-app-title" content="SABnzbd" />
-  <link rel="apple-touch-icon" sizes="76x76" href="./staticcfg/ico/apple-touch-icon-76x76-precomposed" />
-  <link rel="apple-touch-icon" sizes="120x120" href="./staticcfg/ico/apple-touch-icon-120x120-precomposed" />
-  <link rel="apple-touch-icon" sizes="152x152" href="./staticcfg/ico/apple-touch-icon-152x152-precomposed" />
-  <link rel="apple-touch-icon" sizes="180x180" href="./staticcfg/ico/aapple-touch-icon-180x180-precomposed" />        
+  <link rel="apple-touch-icon" sizes="76x76" href="./staticcfg/ico/apple-touch-icon-76x76-precomposed.png" />
+  <link rel="apple-touch-icon" sizes="120x120" href="./staticcfg/ico/apple-touch-icon-120x120-precomposed.png" />
+  <link rel="apple-touch-icon" sizes="152x152" href="./staticcfg/ico/apple-touch-icon-152x152-precomposed.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="./staticcfg/ico/apple-touch-icon-180x180-precomposed.png" />        
   <link rel="icon" sizes="192x192" href="./staticcfg/ico/touch-icon-192x192.png" />
 
   <script type="text/javascript" src="${path}static/javascripts/lib.js?$version"></script>
