--- a/interfaces/Config/templates/config_rss.tmpl
+++ b/interfaces/Config/templates/config_rss.tmpl
@@ -159,7 +159,7 @@
                                 </select>
                             </td>
                             <td>
-                                <input type="text" disabled="disabled" value="" size="25" class="hidden" /> 
+                                <input type="text" disabled="disabled" value="" class="hidden" /> 
                             </td>
                             <!--#if $rss[$feed]['pick_cat']#-->
                             <td>
@@ -231,7 +231,7 @@
                                 </select>
                             </td>
                             <td>
-                                <input type="text" name="filter_text" value="" size="25" /> 
+                                <input type="text" name="filter_text" value="" /> 
                             </td>
                             <!--#if $rss[$feed]['pick_cat']#-->
                             <td>
@@ -306,7 +306,7 @@
                                     </select>
                                 </td>
                                 <td>
-                                    <input type="text" name="filter_text" value="$filter[4]" size="25" /> 
+                                    <input type="text" name="filter_text" value="$filter[4]" /> 
                                 </td>
                                 <!--#if $rss[$feed]['pick_cat']#-->
                                 <td>
