--- a/interfaces/Glitter/templates/include_modals.tmpl
+++ b/interfaces/Glitter/templates/include_modals.tmpl
@@ -211,6 +211,7 @@
                                         <option value="30">30 / $T('Glitter-page')</option>
                                         <option value="40">40 / $T('Glitter-page')</option>
                                         <option value="50">50 / $T('Glitter-page')</option>
+                                        <option value="100">100 / $T('Glitter-page')</option>
                                         <option value="9999999">$T('Glitter-everything')</option>
                                     </select>
                                 </div>
