--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -190,14 +190,14 @@
                     </div>
                     <!-- /ko -->
                     <div class="info-container-box" data-bind="css: { 'queue-error-info' : diskSpaceExceeded1 }">
-                        <span class="glyphicon glyphicon-hdd"></span> <span data-bind="text: diskSpaceLeft1"></span> GB $T('Glitter-free')
+                        <span class="glyphicon glyphicon-hdd"></span> <span data-bind="text: diskSpaceLeft1"></span>B $T('Glitter-free')
                         <!-- ko if: diskSpaceLeft2()  -->
                         <em>($T('Glitter-freeTemp'))</em>
                         <!-- /ko -->
                     </div>
                     <!-- ko if: diskSpaceLeft2()  -->
                     <div class="info-container-box"  data-bind="css: { 'queue-error-info' : diskSpaceExceeded2 }">
-                        <span class="glyphicon glyphicon-hdd"></span> <span data-bind="text: diskSpaceLeft2"></span> GB $T('Glitter-free')
+                        <span class="glyphicon glyphicon-hdd"></span> <span data-bind="text: diskSpaceLeft2"></span>B $T('Glitter-free')
                     </div>
                     <!-- /ko -->
                     <div class="info-container-box-sorting dropdown" data-bind="visible: hasQueue()">
@@ -583,7 +583,7 @@
                                             </div>
                                             <div class="row">
                                                 <div class="col-sm-2">$T('msg-path')</div>
-                                                <div class="col-sm-10" data-bind="text: historyStatus.storage"></div>
+                                                <div class="col-sm-10" data-bind="text: historyStatus.storage() == '' ? historyStatus.path : historyStatus.storage"></div>
                                             </div>
                                             <!-- ko foreach: historyStatus.stage_log -->
                                             <div class="row">
