Improve Notifications config page

--- a/interfaces/Config/templates/config_server.tmpl
+++ b/interfaces/Config/templates/config_server.tmpl
@@ -136,7 +136,7 @@
             
             <table><tr>
               <td><input type="checkbox" class="toggleServerCheckbox" id="enable_$cur" rel="$server['name']" name="q_enable" value="1" <!--#if int($server['enable']) != 0 then 'checked="checked"' else ""#--> /></td>
-              <td><label for="enable_$cur">&nbsp;$T('enabled')</label></td>
+              <td><label for="enable_$cur">$T('enabled')</label></td>
             </tr></table>
 
             <button type="button" class="btn btn-default showserver"><span class="glyphicon glyphicon-pencil"></span> $T('showDetails')</button>
