--- a/interfaces/Config/templates/staticcfg/css/style.css
+++ b/interfaces/Config/templates/staticcfg/css/style.css
@@ -806,8 +806,11 @@ input[type="checkbox"] {
     opacity: 0.7;
 }
 
-.Servers .col2 label {
+.Servers .col2 label,
+.Email .col2 label {
     margin: 0;
+    margin-left: 4px;
+    margin-top: 2px;
     cursor: pointer;
 }
 
