Thou shalt not delete processing/unpacking jobs
Glitter allowed deleting of jobs that weren't done from history, causing
problems!
Didn't know this was not allowed.

--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -594,7 +594,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a href="#" class="hover-button" data-bind="click: deleteSlot"><span class="glyphicon glyphicon-trash"></span></a>
+                                <a href="#" class="hover-button" data-bind="click: deleteSlot, css: { disabled : processingDownload() || processingWaiting() }"><span class="glyphicon glyphicon-trash"></span></a>
                             </td>
                         </tr>
                     </tbody>
