Disable "device" field for Pushover notifications.
Not implemented.

--- a/interfaces/Config/templates/config_notify.tmpl
+++ b/interfaces/Config/templates/config_notify.tmpl
@@ -490,7 +490,7 @@
 					<input type="text" name="pushover_userkey" id="pushover_userkey" value="$pushover_userkey" />
 					<span class="desc">$T('explain-pushover_userkey')</span>
 				</div>
-				<div class="field-pair">
+				<div class="field-pair" style="display:none">
 					<label class="config" for="pushover_device">$T('opt-pushover_device')</label>
 					<input type="text" name="pushover_device" id="pushover_device" value="$pushover_device" />
 					<span class="desc">$T('explain-pushover_device')</span>
