Fixing the RSS config page (again)

--- a/interfaces/Config/templates/config_rss.tmpl
+++ b/interfaces/Config/templates/config_rss.tmpl
@@ -103,7 +103,7 @@
     <!--#end if#-->
     <!--#if $active_feed#-->
     <!--#set $feed = $active_feed#-->
-    <div class="section">
+    <div class="section rss-section">
         <div class="padTable">
             <a class="main-helplink" href="$helpuri$help_uri" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a>
             <h2 class="nomargin activeRSS">
