--- a/interfaces/Config/templates/staticcfg/css/style.css
+++ b/interfaces/Config/templates/staticcfg/css/style.css
@@ -269,7 +269,7 @@ textarea:hover, input[type="date"]:hover, input[type="datetime"]:hover, input[ty
     text-align: center;
 }
 
-.RSS input[type="text"] {
+.RSS .rss-section input[type="text"] {
     max-width: 180px;
 }
 
