--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -281,7 +281,7 @@
                                     <span data-bind="text: progressText"></span>
                                 </div>
                             </td>
-                            <td class="timeleft row-wrap-text" data-bind="text: timeLeft"></td>
+                            <td class="timeleft row-wrap-text" data-bind="text: statusText"></td>
                             <td class="delete">
                                 <label data-bind="visible: parent.isMultiEditing()">
                                     <input type="checkbox" name="multiedit" title="$T('Glitter-multiSelect')" data-bind="click: parent.addMultiEdit, attr: { 'id': 'multiedit_' + id } " />
