--- a/interfaces/Glitter/templates/include_modals.tmpl
+++ b/interfaces/Glitter/templates/include_modals.tmpl
@@ -287,7 +287,7 @@
                 <div class="row">
                     <form data-bind="submit: addNZBFromURL" class="col-sm-6">
                         <fieldset>
-                            <legend>$T('Glitter-addFromURL')</legend>
+                            <legend class="row-wrap-text">$T('Glitter-addFromURL')</legend>
                             <div class="input-group" data-tooltip="true" data-placement="bottom" title="$T('Glitter-nzbFormats')">
                                 <input type="text" name="nzbURL" class="form-control" placeholder="$T('enterURL')" />
                                 <span class="input-group-btn">
@@ -298,7 +298,7 @@
                     </form>
                     <form data-bind="submit: addNZBFromFileForm" class="col-sm-6">
                         <fieldset>
-                            <legend>$T('Glitter-addFromFile')</legend>
+                            <legend class="row-wrap-text">$T('Glitter-addFromFile')</legend>
                             <div class="input-group" data-tooltip="true" data-placement="bottom" title="$T('Glitter-nzbFormats')">
                                 <label class="btn btn-default btn-file">
                                     <span class="glyphicon glyphicon-file"></span> <em>$T('Glitter-chooseFile')&hellip;</em>
